--- a/iweipu-framework/pom.xml
+++ b/iweipu-framework/pom.xml
@@ -9,7 +9,7 @@
 
     <artifactId>iweipu-framework</artifactId>
     <packaging>jar</packaging>
-
+    <version>0.1-SNAPSHOT</version>
     <name>iweipu-framework</name>
     <url>http://maven.apache.org</url>
 
@@ -217,5 +217,16 @@
             <scope>compile</scope>
         </dependency>
     </dependencies>
-
+    <distributionManagement>
+        <repository>
+            <id>releases</id>
+            <name>PipeWork Releases</name>
+            <url>http://192.168.183.130:8081/nexus/content/repositories/releases</url>
+        </repository>
+        <snapshotRepository>
+            <id>snapshots</id>
+            <name>PipeWork Snapshots</name>
+            <url>http://192.168.183.130:8081/nexus/content/repositories/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
