--- a/iweipu-service/src/main/resources/config.properties
+++ b/iweipu-service/src/main/resources/config.properties
@@ -1,4 +1,9 @@
-﻿#CAS  authentication address
+﻿#jdbc
+master.ds.driverClassName=com.mysql.jdbc.Driver
+master.ds.url=jdbc:mysql://192.168.1.107:3306/iweipu?characterEncoding=utf-8
+master.ds.username=root
+master.ds.password=root
+#CAS  authentication address
 cas.server.url=http://192.168.1.10:8080/cas
 #CAS return address
 cas.service.url=http://192.168.1.200:8080/commodity
