--- a/iweipu-framework/pom.xml
+++ b/iweipu-framework/pom.xml
@@ -16,7 +16,7 @@
     <properties>
 
             <spring.version>3.1.0.RELEASE</spring.version>
-            <struts2.version>2.3.16.2</struts2.version>
+            <!--<struts2.version>2.3.16.2</struts2.version>-->
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
