--- a/iweipu-service/pom.xml
+++ b/iweipu-service/pom.xml
@@ -10,11 +10,21 @@
     <packaging>war</packaging>
     <name>iweipu-service Maven Webapp</name>
     <dependencies>
+
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+             <version>5.1.25</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+            <version>1.0.6.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.6.6</version>
         </dependency>
         <dependency>
             <groupId>com.pipework</groupId>
@@ -45,6 +55,12 @@
             <artifactId>iweipu-api</artifactId>
             <version>0.1-SNAPSHOT</version>
             <type>jar</type>
+        </dependency>
+        <!--hessian 用于跨语言支持-->
+        <dependency>
+            <groupId>com.caucho</groupId>
+            <artifactId>hessian</artifactId>
+            <version>4.0.7</version>
         </dependency>
     </dependencies>
 
