--- a/iweipu-service/pom.xml
+++ b/iweipu-service/pom.xml
@@ -10,7 +10,12 @@
     <packaging>war</packaging>
     <name>iweipu-service Maven Webapp</name>
     <dependencies>
-
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>3.8.1</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
@@ -62,6 +67,17 @@
             <artifactId>hessian</artifactId>
             <version>4.0.7</version>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
+            <scope>provided</scope>
+        </dependency>
+        	<dependency>
+        <groupId>jstl</groupId>
+        <artifactId>jstl</artifactId>
+        <version>1.1.2</version>
+    </dependency>
     </dependencies>
 
     <distributionManagement>
