--- a/iweipu-service/src/main/webapp/WEB-INF/web.xml
+++ b/iweipu-service/src/main/webapp/WEB-INF/web.xml
@@ -70,6 +70,22 @@
         <dispatcher>FORWARD</dispatcher>
     </filter-mapping>
 -->
+    <!-- 配置Spring核心控制器 -->
+    <servlet>
+        <servlet-name>dispatcher</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>/WEB-INF/springmvc-servlet.xml</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>dispatcher</servlet-name>
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>
+
     <error-page>
         <error-code>404</error-code>
         <location>/commons/404.jsp</location>
