--- a/iweipu-service/src/main/resources/config.properties
+++ b/iweipu-service/src/main/resources/config.properties
@@ -1,6 +1,7 @@
 ﻿#jdbc
 master.ds.driverClassName=com.mysql.jdbc.Driver
-master.ds.url=jdbc:mysql://192.168.1.107:3306/iweipu?characterEncoding=utf-8
+#master.ds.url=jdbc:mysql://192.168.1.107:3306/iweipu?characterEncoding=utf-8
+master.ds.url=jdbc:mysql://192.168.1.100:3306/iweipu?characterEncoding=utf-8
 master.ds.username=root
 master.ds.password=root
 #CAS  authentication address
@@ -11,9 +12,10 @@ cas.service.url=http://192.168.1.200:8080/commodity
 web.basepath=/commodity
 
 #ZooKeeper
-dubbo.registry.address=192.168.183.130:2181
-dubbo.registry.address.client=192.168.183.130:2181
-
+#dubbo.registry.address=192.168.183.130:2181
+#dubbo.registry.address.client=192.168.183.130:2181
+dubbo.registry.address=192.168.1.104:2181
+dubbo.registry.address.client=192.168.1.104:2181
 #REDIS配置
 redis.ip=192.168.183.130
 redis.port=6379
