test dubbo provider

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <module>iweipu-api</module>
         <module>iweipu-service</module>
         <module>iweipu-framework</module>
+        <module>iweipu-consumer</module>
     </modules>
     <packaging>pom</packaging>
 
