--- a/iweipu-provider/src/main/resources/config.properties
+++ b/iweipu-provider/src/main/resources/config.properties
@@ -1,6 +1,6 @@
 ﻿#jdbc
 master.ds.driverClassName=com.mysql.jdbc.Driver
-master.ds.url=jdbc:mysql://localhost:3306/iweipu?characterEncoding=utf-8
+master.ds.url=jdbc:mysql://localhost:3306/iweipudemo?characterEncoding=utf-8
 #master.ds.url=jdbc:mysql://192.168.1.100:3306/iweipu?characterEncoding=utf-8
 master.ds.username=root
 master.ds.password=root
@@ -12,8 +12,8 @@ cas.service.url=http://192.168.1.200:8080/commodity
 web.basepath=/commodity
 
 #ZooKeeper
-dubbo.registry.address=192.168.27.130:2181
-dubbo.registry.address.client=192.168.27.130:2181
+dubbo.registry.address=192.168.27.135:2181
+dubbo.registry.address.client=192.168.27.135:2181
 #dubbo.registry.address=192.168.183.130:2181
 #dubbo.registry.address.client=192.168.183.130:2181
 #dubbo.registry.address=192.168.1.104:2181
