--- a/iweipu-api/pom.xml
+++ b/iweipu-api/pom.xml
@@ -23,6 +23,18 @@
             <artifactId>commons-logging</artifactId>
             <version>1.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.pipework</groupId>
+            <artifactId>iweipu-model</artifactId>
+            <version>0.1-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>com.pipework</groupId>
+            <artifactId>iweipu-framework</artifactId>
+            <version>0.1-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
         <!--alibaba-->
         <dependency>
             <groupId>com.alibaba</groupId>
